some changes to raytracer experiment

--- a/cpp/RayTracer/RayTracer.vcproj
+++ b/cpp/RayTracer/RayTracer.vcproj
@@ -115,13 +115,26 @@
 			Filter="cpp;c;cxx;def;odl;idl;hpj;bat;asm;asmx"
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}">
 			<File
-				RelativePath=".\RayTracerMP.cpp">
+				RelativePath=".\RayTracer.cpp">
 			</File>
+			<Filter
+				Name="fractals"
+				Filter="">
+				<File
+					RelativePath=".\fractals\Menger3D.cpp">
+				</File>
+				<File
+					RelativePath=".\fractals\Menger4D.cpp">
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}">
+			<File
+				RelativePath=".\fractals.h">
+			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
